--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -3,6 +3,7 @@ numpy >= 1.6
 matplotlib
 pandas
 pydotplus
-sphinx >= 1.3
+sphinx==1.2.3
+sphinxcontrib-napolean
 sphinxcontrib-bibtex
 sphinx_rtd_theme
